--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="x-icon" href="images/Browser_Logo.png">
     <title>Litheesh - Portfolio</title>
     <script src="https://kit.fontawesome.com/9c31ab7049.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -55,7 +56,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me:</h1>
-                <p>My name is <span>Kamarthi Litheesh Kumar</span>. I am currently final year undergrad at IIIT Sricity, majoring in Electronics and communications. I am interested in <span id="second">web development</span>, Data structures and Algorithms. I have experience and good knowledge in C++, OOPS concepts. I believe that skills that I have attained from college life and dynamic environment define me and I am looking to implementing and polishing them in any opportunity that I receive.</p>
+                <p>My name is <span>Kamarthi Litheesh Kumar</span>. I am currently final year undergrad at IIIT Sricity, majoring in Electronics and communications. I am interested in <span id="second">web development</span>, Data structures and Algorithms. I have experience and good knowledge in C++, Python, OOPS concepts. I believe that skills that I have attained from college life and dynamic environment define me and I am looking to implementing and polishing them in any opportunity that I receive.</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                     <p class="tab-links" onclick="opentab('skills')">Skills</p>
@@ -213,6 +214,10 @@
         <p>Copyright © 2022 Kamarthi Litheesh Kumar. All rights reserved.</p>
     </div>
 </div>
+<a href="#" class="to-top">
+    <i class="fas fa-chevron-up"></i>
+</a>
+<script src="main.js"></script>
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
